<resources>
    <string name="app_name">Multithreading</string>
    <string name="handler">Handler</string>
    <string name="empty_text" />
    <string name="start">Start</string>
    <string name="test">Test</string>
    <string name="handlemessage_want">handleMessage want</string>
    <string name="connect">Connect</string>
    <string name="handlemessage_arg1_arg2_obj">handleMessage arg1 arg2 obj</string>
    <string name="delayed_remove_callback">Delayed Remove Callback</string>
    <string name="handler_runnable">Handler Runnable</string>
    <string name="test_methods">Test Methods</string>
    <string name="asynctask_begin">AsyncTask Begin</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="asynctask_parameter">AsyncTask Parameter</string>
    <string name="asynctask_get">AsyncTask get</string>
    <string name="result">Result</string>
    <string name="cancel">Cancel</string>
    <string name="asynctask_cancel">AsyncTask Cancel</string>
    <string name="asynctask_status">AsyncTask Status</string>
    <string name="status">Status</string>
    <string name="get_status">getStatus</string>
    <string name="hint_result">Result</string>
    <string name="rotation">Rotation</string>
    <string name="loader">Loader</string>
    <string name="format_short">short</string>
    <string name="format_long">long</string>
    <string name="get_time">get time</string>
    <string name="observer">observer</string>
    <string name="asynctaskloader">AsyncTaskLoader</string>
</resources>
