<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="._013_loader.LoaderActivity">

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/empty_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/time_format_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_text_view">

        <RadioButton
            android:id="@+id/short_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/format_short" />

        <RadioButton
            android:id="@+id/long_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/format_long" />
    </RadioGroup>

    <Button
        android:id="@+id/get_time_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/get_time"
        android:onClick="getTimeOnClick"
        app:layout_constraintEnd_toStartOf="@+id/observer_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_format_radio_group" />

    <Button
        android:id="@+id/observer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/observer"
        android:onClick="observerOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/get_time_button"
        app:layout_constraintTop_toTopOf="@+id/get_time_button" />

</androidx.constraintlayout.widget.ConstraintLayout>