<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <Button
                android:id="@+id/handler_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/handler"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/handler_want_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/handlemessage_want"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handler_button" />

            <Button
                android:id="@+id/handler_attribute_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/handlemessage_arg1_arg2_obj"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handler_want_button" />

            <Button
                android:id="@+id/handler_delayed_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/delayed_remove_callback"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handler_attribute_button" />

            <Button
                android:id="@+id/handler_runnable_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/handler_runnable"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handler_delayed_button" />

            <Button
                android:id="@+id/handler_test_methods_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/test_methods"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handler_runnable_button" />

            <Button
                android:id="@+id/async_task_begin_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/asynctask_begin"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/handler_test_methods_button" />

            <Button
                android:id="@+id/async_task_attr_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/asynctask_parameter"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/async_task_begin_button" />

            <Button
                android:id="@+id/async_task_get_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/asynctask_get"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/async_task_attr_button" />

            <Button
                android:id="@+id/async_task_cancel_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/asynctask_cancel"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/async_task_get_button" />

            <Button
                android:id="@+id/status_async_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/get_status"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/async_task_cancel_button" />

            <Button
                android:id="@+id/rotation_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/rotation"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_async_button" />

            <Button
                android:id="@+id/loader_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/loader"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rotation_button" />

            <Button
                android:id="@+id/async_task_loader_button"
                style="@style/style_buttons_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_edges_buttons"
                android:fontFamily="@font/delius_unicase"
                android:onClick="onClick"
                android:text="@string/asynctaskloader"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loader_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>