<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="._011_async_task_status.AsyncTaskStatusActivity">


    <TextView
        android:id="@+id/status_async_task_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_status_async_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:onClick="startStatusOnClick"
        app:layout_constraintEnd_toStartOf="@+id/status_async_task_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/status_async_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:onClick="startStatusOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_status_async_task_button" />

</androidx.constraintlayout.widget.ConstraintLayout>