<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="._001_handler.HandlerActivity">

    <TextView
        android:id="@+id/info_handler_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/handler_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_handler_button"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:text="@string/start"
        android:onClick="startOrTestOnClick"
        app:layout_constraintBottom_toTopOf="@+id/test_handler_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_handler_text_view" />

    <Button
        android:id="@+id/test_handler_button"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/test"
        android:onClick="startOrTestOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_handler_button"
        tools:layout_editor_absoluteX="351dp" />


</androidx.constraintlayout.widget.ConstraintLayout>